--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,18 @@ yarn-error.log*
 next-env.d.ts
 
 /src/generated/prisma
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# SQLite
+*.db
+*.db-journal
+
+# Uploads
+/public/uploads
+
