--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@pdf-lib/fontkit": "^1.1.1",
     "@prisma/client": "5.22.0",
     "@tiptap/extension-image": "^3.14.0",
     "@tiptap/extension-link": "^3.14.0",
@@ -22,6 +23,9 @@
     "clsx": "^2.1.1",
     "next": "14.2.35",
     "next-auth": "^4.24.13",
+    "pdf-lib": "^1.17.1",
+    "pdfkit": "^0.17.2",
+    "puppeteer": "^24.34.0",
     "react": "^18",
     "react-dom": "^18",
     "react-easy-crop": "^5.5.6",
@@ -30,6 +34,7 @@
   "devDependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/node": "^20",
+    "@types/pdfkit": "^0.17.4",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
