--- a/package.json
+++ b/package.json
@@ -21,6 +21,10 @@
     "@tiptap/extension-table-row": "^3.14.0",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
+    "@types/adm-zip": "^0.5.7",
+    "@types/archiver": "^7.0.0",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "bcryptjs": "^3.0.3",
     "clsx": "^2.1.1",
     "next": "14.2.35",
@@ -42,6 +46,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.35",
     "prisma": "5.22.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vitest": "^4.0.17"
   }
 }
