--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tiptap/extension-table-cell": "^3.14.0",
     "@tiptap/extension-table-header": "^3.14.0",
     "@tiptap/extension-table-row": "^3.14.0",
+    "@tiptap/extension-text-align": "^3.15.3",
     "@tiptap/react": "^3.14.0",
     "@tiptap/starter-kit": "^3.14.0",
     "@types/adm-zip": "^0.5.7",
@@ -35,6 +36,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-easy-crop": "^5.5.6",
+    "tiptap-extension-resize-image": "^1.3.2",
     "zustand": "^5.0.9"
   },
   "devDependencies": {
